added more endpoint docs
